# GCHP

./: .gitignore  .gitmodules  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SUPPORT.md  run  spack  test
.ci-pipelines/: build-matrix.yml  quick-build.yml  quick-test.yml  release.dockerfile  release.yml
.ci-pipelines/spack-deployment/: spack-deployment.dockerfile  spack-packaging.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ask-a-question-about-geos-chem.md  bug-report.yml  config.yml  new-feature-or-discussion.md  new-feature.yml  question-discussion.yml  question-issue.md  report-a-bug-or-technical-issue.md  request-a-new-feature.md  start-a-geos-chem-discussion.md  submodule-updates.md
.github/PULL_REQUEST_TEMPLATE/: create-a-gchp-pull-request.md  pull-request.md
.github/workflows/: cloud-benchmarking-workflow.yml  findRefKey.sh  lint-ci-workflows.yml  spack-deployment-workflow.yml  stale.yml
.github/workflows/spack-deployment/: environment.dockerfile  environment.yml  spack-deployment.dockerfile  spack-packaging.sh
.release/: changeVersionNumbers.sh
cmake/: FindESMF.cmake  FindNetCDF.cmake
docs/: read_the_docs_environment.yml  requirements.txt
docs/source/: bibtex.json  conf.py  index.rst  stretched-grid.rst
docs/source/RUN-GUIDE-AWS-2025/: Create-fsx.rst  Run-gchp.rst  Set-up-pcluster.rst
docs/source/_static/: sg-interactive.html
docs/source/getting-started/: gentle-intro.rst  getting-help.rst  key-references.rst  quick-start.rst  requirements.rst
docs/source/reference/: FAQ.rst  contributing.rst  git-submodules.rst  glossary.rst  known-bugs.rst  uploading_to_spack.rst  versioning.rst
docs/source/step-by-step/: config-files.rst  plotting-output.rst  rundir-config.rst  satellite-overpass.rst  spack.rst  stretched-grid.rst
docs/source/supplement/: aws-terminology.rst  building-gchp-dependencies.rst  caching-input-data.rst  config-files.rst  containers.rst  gchp-simulations.rst  horizontal-grids.rst  job-script-examples.rst  plotting-output.rst  prepare-aws-environment.rst  run-gchp-on-cloud.rst  rundir-config.rst  satellite-overpass.rst  setting-up-aws-parallelcluster.rst  spack.rst  stretched-grid.rst  technical-guides.rst  vertical-grids.rst
docs/source/supplement/config-files/: ExtData.rst  HEMCO.rst  HISTORY.rst  input_geos.rst  others.rst
docs/source/tutorials/: stretched-grid.rst
docs/source/user-guide/: compiling.rst  configuration-files.rst  containers.rst  debugging.rst  downloading.rst  getting-input-data.rst  output_files.rst  plotting-output.rst  requirements.rst  rundir-config.rst  rundir-init.rst  running.rst
docs/source/user-guide/config-files/: CAP_rc.rst  ExtData_rc.rst  GCHP_rc.rst  HEMCO_Config_rc.rst  HEMCO_Diagn_rc.rst  HISTORY_rc.rst  cap_restart.rst  geoschem_config_yml.rst  input_nml.rst  logging_yml.rst  setCommonRunSettings_sh.rst
spack/: modules.yaml  packages.yaml
spack/aws-parallelcluster-3.0.1/: packages.yaml
src/: CMakeLists.txt  GCHPctm.F90  GEOSChem.F90
src/GCHP_GridComp/: CMakeLists.txt  GCHP_GridCompMod.F90  GCHP_GridCompMod.mapl2.F90  GCHP_GridCompMod.messy.F90  GCHP_GridCompMod.no_children_mapl3.F90
src/GCHP_GridComp/GCHPctmEnv_GridComp/: CMakeLists.txt  GCHPctmEnv_GridComp.F90  GCHPctmEnv_GridCompMod.F90
src/GCHP_GridComp/GEOSChem_GridComp/: CMakeLists.txt  Chem_GridCompMod.F90
src/GCHP_GridComp/GEOSChem_GridComp/HEMCO/: CMakeLists.txt
src/GCHP_GridComp/GEOSctmEnv_GridComp/: CMakeLists.txt  GEOS_HyCoords.H
src/GCHP_GridComp/HEMCO_GridComp/: CMakeLists.txt
src/GCHP_GridComp/Skeleton_GridComp/: CMakeLists.txt  Skeleton_GridCompMod.F90
src/GCHP_GridComp/test/: README
src/GCHP_GridComp/test/case01/: cap.yaml  cap_restart.yaml  dynamics.yaml  extdata.yaml  history.yaml  logging.yaml
src/GCHP_GridComp/test/case1/: GCHP.yaml  README  cap.yaml  extdata.yaml  gchp.yaml  logging.yaml
src/GIGC_GridComp/: CMakeLists.txt  GIGC_GridCompMod.F90
src/GIGC_GridComp/GEOSChem_GridComp/: CMakeLists.txt  Chem_GridCompMod.F90
src/GIGC_GridComp/GEOSctmEnv_GridComp/: CMakeLists.txt  GEOS_ctmEnvGridComp.F90
